samples/_failures_safe/1761175435_9a7f26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_092cbd3d.c: In function ‘parser_init’:
./samples/SAFE/__tmp_092cbd3d.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->has_error = 0;
      |     ^~~~~~
